@@ -1,3 +1,10 @@
+2007-02-28  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/updates.py:  Added a new updates command for
+	grabbing updates.img files.
+	* pykickstart/commands/__init__.py:  Pull in new command object.
+	* pykickstart/handlers/control.py:  Add new command to F7 map.
+
 2007-02-26  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart.spec, setup.py:  New version.
